# dea-ard-scene-select

./: .gitignore  .pre-commit-config.yaml  README.rst  ard_production.sh  auto-test-run-setup.py  check-code.sh  check.py  definitive.env  examples.sh  gadi_test_get_l1_no_ARD.py  go.sh  play.py  pylintrc  pyproject.toml  pytest.ini  region_code_filter.py  requirements.txt  run_black.sh  run_pylint.sh  setup.py
ard_scene_select/: check.py  examples.sh
auxiliary-extents/: aerosol.shx  brdf_tiles.shx  ocean_mask.dbf  one-deg-dsm-v1.shx
auxiliary_extents/: auxiliary_new.shp  brdf_tiles.dbf  brdf_tiles.shp  brdf_tiles_new.dbf  one-deg-dsm-v1.shp  one-deg-dsm-v2.dbf  one-sec-dsm-v1.dbf  one-sec-dsm-v1.shp
docs/: scene_select_swimlanes.drawio  swimlanes.drawio
examples/: dsg_examples.sh  nci_examples.sh  small_Landsat_Level1_Nci_Files.txt
modules/: go.sh  modulefile.template  package-module.sh
nci_tests/: do_tests.sh  test_ard_scene_select.py  timing_check_ancillary.py
scene_select/: ard_production.sh  ard_reprocessed_l1s.py  ard_scene_select.py  batch_stats.py  bulk_process.py  check_ancillary.py  collections.py  dass_logs.py  do_ard.py  examples.sh  gapfill.py  generate_aoi.py  library.py  merge_bulk_runs.py  scene_filters.py  test_bulk_process.py  utils.py
scripts/: ard_index_production.sh  ard_production.sh  c3-samples-ard_index.sh  c3-samples-index-datacube.env  examples.sh  manual.sh  nci_examples.sh  prod-wagl.env  test_ard_index_production.sh  test_ard_production.sh
tests/: check.py  conftest.py  do_tests.sh  dynamic_config_file.sh  test_bad_day.py  (+7 more)
(+319 files in other folders)
